--- a/gulp/task/list-pages/listPages.html
+++ b/gulp/task/list-pages/listPages.html
@@ -53,7 +53,7 @@
     body {
       color: #333;
       margin: 0;
-      padding: 0 15px;
+      /*padding: 0 15px;*/
       font-size: 20px;
       line-height: 1.6;
       font-family: 'Politica', serif;
@@ -103,17 +103,15 @@
 
     section {
       width: 300px;
-      padding: 30px 0;
+      padding: 30px 0 30px 15px;
     }
 
     .preview {
       position: fixed;
-      right: 0;
+      right: 15px;
       left: 315px;
-      margin: 0 auto;
       top: 120px;
-      bottom: 40px;
-      padding: 0 15px;
+      bottom: 15px;
     }
 
     iframe {
@@ -166,6 +164,10 @@
       text-decoration: none;
       padding: 5px 8px 5px 3px;
       position: relative;
+    }
+
+    .is-notready {
+      pointer-events: none;
     }
 
     .is-notready .pagelist__title {
@@ -245,13 +247,26 @@
     .pagelist__progress i {
       height: 5px;
       display: block;
-      background: #9e9e9e;
+      background: #2196f3;
     }
 
     .pagelist__filename {
       font-size: 14px;
       font-weight: bold;
       margin: 0;
+    }
+
+    .pagelist__filename--progress {
+      color: #e54304;
+    }
+    .pagelist__filename--finished {
+      color: #41c300;
+    }
+    .pagelist__filename--testing {
+      color: #ff9e22;
+    }
+    .pagelist__filename--developing {
+      color: #e54304;
     }
 
     header {
@@ -519,6 +534,13 @@
       <strong>Desktop HD</strong>
       <span>1440px</span>
     </button>
+    <button data-mode="wide" data-width="1920">
+      <svg class="icon icon-wide">
+        <use xlink:href="#icon-wide"></use>
+      </svg>
+      <strong>Desktop HD+</strong>
+      <span>1920px</span>
+    </button>
   </nav>
 </header>
 <section>
@@ -544,7 +566,23 @@
       </svg>
     </a>
 
-    <p class="pagelist__filename"><%= page.file %></p>
+    <p class="pagelist__filename">
+      <span class="pagelist__filename--progress">
+        <% if(page.ready == 01) { %> - IN PROGRESS <% } %>
+      </span>
+      <span class="pagelist__filename--testing">
+        <% if(page.ready >= 75 && page.ready <= 95) { %> - AWAITING TESTING - review <% } %>
+      </span>
+      <span class="pagelist__filename--developing">
+        <% if(page.ready >= 1 && page.ready < 55) { %> - IN DEVELOPING - desktop view <% } %>
+      </span>
+      <span class="pagelist__filename--developing">
+        <% if(page.ready >= 55 && page.ready < 75) { %> - IN DEVELOPING - mobile view <% } %>
+      </span>
+      <span class="pagelist__filename--finished">
+        <% if(page.ready > 95) { %> - FINISHED PAGES <% } %>
+      </span>
+    </p>
 
     <div class="pagelist__progress">
       <% if(!page.ready) page.ready = 0; %>
@@ -649,8 +687,6 @@
       if (mode === "mobile") {
         iframe.style.transform = "scale(" + 1 + ")";
         iframe.style.height = pheight + "px";
-
-
         return;
       }
       if (scaleH > 1) {
