Modify gulp task. Clear project files.

--- a/dest/index.html
+++ b/dest/index.html
@@ -30,13 +30,13 @@
   </head>
   <body>
     <!-- HEADER :: START-->
-    <header class="header" id="header">
+    <nav class="header" id="header">
       <div class="c-grid">
         <div class="header__wrapper"></div>
       </div>
-    </header>
+    </nav>
     <!-- HEADER :: END-->
-    <div class="body p-home"></div>
+    <main class="main p-home"></main>
     <!-- FOOTER :: START-->
     <footer class="footer" id="footer">
       <div class="c-grid">
